--- a/tema1.html
+++ b/tema1.html
@@ -1,3 +1,4 @@
+<!--nombre del alumno Leo Morales-->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -66,7 +67,7 @@
                 <footer>
                     <!-- Datos del autor -->
                     <div>
-                        <span>Nombre del autor</span> <a href="http://miredsocial.com/nombredelautor" target="_blank">@nombredelautor en mi_red_social</a>
+                        <span>leo morales </span> <a href="http://miredsocial.com/nombredelautor" target="_blank">@nombredelautor en mi_red_social</a>
                     </div>
                     <!-- fin datos del autor -->
                     <!-- bibliografía -->
