--- a/tema2.html
+++ b/tema2.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html"target="_blank">principal</a></li>
-            <li><a href="mi_tema1.html">mi tema 1</a></li>
+            <li><a href="mi_tema1.html">formula 1</a></li>
            
         </ul>
     </nav>
@@ -47,10 +47,7 @@
                     <p>que es el futbol y como funciona por  que es tan famoso .</p>
 
                     <h3>Desarrollo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
-
+                    <p>Este es de los desportes mas famosos del mundo pero por que ?
                     <h3>Motivación</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
                         Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
