--- a/tema1.html
+++ b/tema1.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html"target="_blank">principal</a></li>
-            <li><a href="mi_tema2.html">mi tema 2</a></li>
+            <li><a href="mi_tema2.html">futbol en general</a></li>
             
         </ul>
     </nav>
@@ -36,7 +36,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo --> F1 lo que debes de saber 
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Introducción a mi_tema</h2>
+                        <h2> <img src="assets/images/f1.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Introducción a la Formula 1</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>15/marzo/2022</h4>
                     </hgroup>
@@ -44,13 +44,11 @@
                 <!-- inicia contenido del artículo -->
                 <div>
                     <h3>Contexto</h3>
-                    <p>Que es la formula 1?</p>
+                    <p>Que es la formula 1? la formula 1 es uno de los deportes con mas</p>
 
                     <h3>Desarrollo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
-
+                    <p>la formula 1 es el deporte mas grande del autivilismo en una epoca muchas personas no lo consideraban un deporte pensaban que solo son personas manejando eso lo podria hacer cualquiera
+                        pero lo que no saben como es trabajar este deporte tan demandante y muy peligroso y el por que en los ultimos años se volvio nuvamente famoso 
                     <h3>Motivación</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
                         Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
@@ -58,7 +56,7 @@
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
+                        <img src="assets/images/sergio-perez-red-bull-racing.jpg" alt="ilustracion  artículo" height="600px" width="auto">
                         <figcaption>Texto de descripción de mi ilustración.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
@@ -298,7 +296,7 @@
                 <span>Nombre persona 1</span>
             </div>
             <div>
-                <span>Blog creado en <i>nombre de tu colegio</i>.</span>
+                <span>Blog creado en <i>colegio alamos</i>.</span>
                 <span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
             </div>
             <div>
