--- a/tema1.html
+++ b/tema1.html
@@ -44,7 +44,7 @@
                 <!-- inicia contenido del artículo -->
                 <div>
                     <h3>Contexto</h3>
-                    <p>Que es la formula 1? la formula 1 es uno de los deportes con mas</p>
+                    <p>Que es la formula 1? la formula 1 es uno de los deportes con mas repercucion de estos años y legendario en el mundo del automovilismo</p>
 
                     <h3>Desarrollo</h3>
                     <p>la formula 1 es el deporte mas grande del autivilismo en una epoca muchas personas no lo consideraban un deporte pensaban que solo son personas manejando eso lo podria hacer cualquiera
@@ -57,7 +57,7 @@
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="assets/images/sergio-perez-red-bull-racing.jpg" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                        <figcaption>gran premio de miami.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -83,35 +83,42 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Ranking de ejemplo</h2>
+                        <h2> <img src="assets/images/f1.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Ranking de pilotos de f1 2022</h2>
                         <!-- Fecha en la que se escribió el artículo -->
-                        <h4>dd/mes/aa</h4>
+                        <h4>1/1/2022</h4>
                     </hgroup>
                 </header>
                 <!-- inicia contenido del artículo -->
                 <div>
                     <!-- Empieza mi ranking en orden inverso -->
                     <ol reversed>
-                        <li>elemento 1</li>
-                        <li>elemento 2</li>
-                        <li>elemento 3</li>
-                        <li>elemento 4</li>
-                        <li>elemento 5</li>
-                        <li>elemento 6</li>
-                        <li>elemento 7</li>
-                        <li>elemento 8</li>
-                        <li>elemento 9</li>
-                        <li>elemento 10</li>
+                        <li>Max Versstapen</li>
+                        <li>Checo Perez</li>
+                        <li>Lewis Hamilton</li>
+                        <li>Valteri Bottas</li>
+                        <li>Charles leclerc</li>
+                        <li>Carlos Sainz</li>
+                        <li>Lando Norris</li>
+                        <li>Daniel Ricciardo</li>
+                        <li>Fernando Alonso</li>
+                        <li>Estaban Ocon</li>
+                        <li>George Russel</li>
+                        <li>Nicholas Latifi</li>
+                        <li>Alexander Albon</li>
+                        <li>Kevin Magnusen</li>
+                        <li>Mick Shumacher</li>
+                        <li>Sebastian Vettel</li>
+                        <li>Lance Stroll</li>
+                        <li>Guanyu Zhou</li>
+                        <li>Pierre Gasly</li>
+                        <li>Yuki Tsunoda</li>
                     </ol>
                     <!-- Termina mi ranking en orden inverso -->
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique aliquam et quo id ipsa, ratione rem excepturi magni tempore totam aspernatur, esse, illum accusantium blanditiis culpa praesentium vel. Enim dignissimos velit mollitia voluptates alias a quasi error doloremque
-                        culpa, vitae aliquid harum facilis explicabo ullam. Officiis eos, consequatur nisi, nam odit perspiciatis quas placeat optio ratione, officia perferendis cum labore ab ullam illo minima veniam aut hic animi? Beatae nostrum sapiente aperiam debitis eligendi incidunt, unde eos
-                        repellendus at fugiat quae odio assumenda, non magnam! Facilis fugit quibusdam sed voluptatibus magni, dolorem rerum ea praesentium, totam nihil veritatis non repudiandae!</p>
-
+                    <p>estos son los 20 pilotos que disputarian el compeonato de la f1 del 2022
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                        <figcaption>parrila de salida 1 carrera f1 2022.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
