--- a/tema1.html
+++ b/tema1.html
@@ -23,7 +23,7 @@
     <section>
         <!--empieza encabezado del blog-->
         <header>
-            <h1>f1 lo que debes saber </h1>
+            <h1>F1 lo que debes saber </h1>
         </header>
         <!--termina encabezado del blog-->
 
@@ -35,7 +35,7 @@
              <article>
                 <header>
                     <hgroup>
-                        <!-- Título del artículo --> F1 lo que debes de saber 
+                        <!-- Título del artículo --> Aprenderas y te Informaras del famoso Deporte Formula 1 
                         <h2> <img src="assets/images/f1.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Introducción a la Formula 1</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>15/marzo/2022</h4>
@@ -43,16 +43,22 @@
                 </header>
                 <!-- inicia contenido del artículo -->
                 <div>
-                    <h3>Contexto</h3>
-                    <p>Que es la formula 1? la formula 1 es uno de los deportes con mas repercucion de estos años y legendario en el mundo del automovilismo</p>
+                    <h3>Que es la formula 1 y por que es tan famoso?</h3>
+                    <p>Que es la formula 1? la formula 1 es uno de los deportes con mas repercucion de estos años y legendario en el mundo del automovilismo es mas conocido
+                        por lo extremo de peligroso que es y lo demandante que es,poder ver a esos coches tan iconicos de carreras ir a mas de 300 kilometros 
+                        por hora  
+                        
+                    </p>
 
-                    <h3>Desarrollo</h3>
-                    <p>la formula 1 es el deporte mas grande del autivilismo en una epoca muchas personas no lo consideraban un deporte pensaban que solo son personas manejando eso lo podria hacer cualquiera
-                        pero lo que no saben como es trabajar este deporte tan demandante y muy peligroso y el por que en los ultimos años se volvio nuvamente famoso 
-                    <h3>Motivación</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
+                    <h3>2021? Por que fue un gran año para la formula 1 </h3>
+                    <p>La formula 1 es el deporte mas grande del autivilismo en una epoca muchas personas no lo consideraban un deporte pensaban que solo son personas manejando eso lo podria hacer cualquiera
+                        pero lo que no saben como es trabajar este deporte tan demandante y muy peligroso y el por que en los ultimos años se volvio nuvamente famoso tras un espetacular temporada 
+                        en el 2021 tras lamasiva lucha de red bull y mercedes y la disputa del campeonato entre Lewis Hamilton y Max Versstapen
+                   
+                        <h3>Que la formula 1 para este 2022</h3>
+                    <p>En el año 2022 la formula es la moda y lo famoso de ahora tras tener un espetacular 2021 en la f1 a 
+                        llegado a muchas mas personas que hoy en dia cadacarrera es vista por millones de personas esta temporada 
+                        2022 se espera un espetaculo igual o mas grande que la del 2021 .</p>
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
@@ -114,10 +120,10 @@
                         <li>Yuki Tsunoda</li>
                     </ol>
                     <!-- Termina mi ranking en orden inverso -->
-                    <p>estos son los 20 pilotos que disputarian el compeonato de la f1 del 2022
+                    <p>Estos son los 20 pilotos que disputarian el compeonato de la f1 del 2022
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
+                        <img src="assets/images/i-f1-75--1.jpg" alt="ilustracion  artículo" height="600px" width="auto">
                         <figcaption>parrila de salida 1 carrera f1 2022.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
