--- a/tema2.html
+++ b/tema2.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html"target="_blank">principal</a></li>
-            <li><a href="mi_tema1.html">formula 1</a></li>
+            <li><a href="mi_tema1.html">Formula 1</a></li>
            
         </ul>
     </nav>
@@ -35,16 +35,16 @@
              <article>
                 <header>
                     <hgroup>
-                        <!-- Título del artículo --> futbol en general explicacion
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Introducción a mi_tema</h2>
+                        <!-- Título del artículo --> El deporte mas famoso del mundo 
+                        <h2> <img src="assets/images/futbol-americano.png" alt="balon" height="35px" width="auto"> Por que es el deporte mas famoso del mundo EL FUTBOL</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>20/enero/2022</h4>
                     </hgroup>
                 </header>
                 <!-- inicia contenido del artículo -->
                 <div>
-                    <h3>Contexto</h3>
-                    <p>que es el futbol y como funciona por  que es tan famoso .</p>
+                    <h3>FUTBOL EL MEJOR DEPORTE DEL MUNDO?</h3>
+                    <p>El futbol es conciderado el mejor deporte del mundo es el mas  famoso de todo los tiempos   .</p>
 
                     <h3>Desarrollo</h3>
                     <p>Este es de los desportes mas famosos del mundo pero por que ?
@@ -55,7 +55,7 @@
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
+                        <img src="assets/images/fut1..webp" alt="ilustracion  artículo" height="600px" width="auto">
                         <figcaption>Texto de descripción de mi ilustración.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
