--- a/tema1.html
+++ b/tema1.html
@@ -55,7 +55,7 @@
                         pero lo que no saben como es trabajar este deporte tan demandante y muy peligroso y el por que en los ultimos años se volvio nuvamente famoso tras un espetacular temporada 
                         en el 2021 tras lamasiva lucha de red bull y mercedes y la disputa del campeonato entre Lewis Hamilton y Max Versstapen
                    
-                        <h3>Que la formula 1 para este 2022</h3>
+                        <h3>Que es la formula 1 para este 2022</h3>
                     <p>En el año 2022 la formula es la moda y lo famoso de ahora tras tener un espetacular 2021 en la f1 a 
                         llegado a muchas mas personas que hoy en dia cadacarrera es vista por millones de personas esta temporada 
                         2022 se espera un espetaculo igual o mas grande que la del 2021 .</p>
