--- a/tema1.html
+++ b/tema1.html
@@ -63,7 +63,7 @@
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="assets/images/sergio-perez-red-bull-racing.jpg" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>gran premio de miami.</figcaption>
+                        <figcaption>Gran Premio de Miami.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -71,7 +71,7 @@
                 <footer>
                     <!-- Datos del autor -->
                     <div>
-                        <span>leo morales </span> <a href="http://miredsocial.com/nombredelautor" target="_blank">@nombredelautor en mi_red_social</a>
+                        <span>leo morales </span> <a href="http://miredsocial.com/Leonardo morales" target="_blank">@nombredelautor en mi_red_social</a>
                     </div>
                     <!-- fin datos del autor -->
                     <!-- bibliografía -->
@@ -124,7 +124,7 @@
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="assets/images/i-f1-75--1.jpg" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>parrila de salida 1 carrera f1 2022.</figcaption>
+                        <figcaption>Parrila de salida 1 carrera F1 2022.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -132,7 +132,7 @@
                 <footer>
                     <!-- Datos del autor -->
                     <div>
-                        <span>Nombre del autor</span> <a href="http://miredsocial.com/nombredelautor" target="_blank">@nombredelautor en mi_red_social</a>
+                        <span>Nombre del autor</span> <a href="http://miredsocial.com/Leonardo morales" target="_blank">@nombredelautor en mi_red_social</a>
                     </div>
                     <!-- fin datos del autor -->
                     <!-- bibliografía -->
@@ -149,7 +149,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Sitios oficiales ejemplo</h2>
+                        <h2> <img src="assets/images/f1.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Sitios oficiales donde podras llenarte de la mejor informacion de la F1</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>dd/mes/aa</h4>
                     </hgroup>
@@ -158,20 +158,20 @@
                 <div>
                     <!-- Empieza mi lista de sitios oficiales -->
                     <ul>
-                        <li><a href="https://google.com" target="_blank">sitio oficial de ejemplo 1</a></li>
-                        <li><a href="https://google.com" target="_blank">sitio oficial de ejemplo 2</a></li>
-                        <li><a href="https://google.com" target="_blank">sitio oficial de ejemplo 3</a></li>
+                        <li><a href="https://www.formula1.com/" target="_blank">Sitio Oficial de F1 /a></li>
+                        <li><a href="https://f1tv.formula1.com/" target="_blank">Sitio Oficial F1 para ver todas las carreras con camaras exclusivas </a></li>
+                        <li><a href="https://www.f1aldia.com/" target="_blank">sitio oficial de pagina especialisada en dar la mejor informacion de la F1</a></li>
                         <li><a href="https://google.com" target="_blank">sitio oficial de ejemplo 4</a></li>
                         <li><a href="https://google.com" target="_blank">sitio oficial de ejemplo 5</a></li>
                     </ul>
                     <!-- Termina mi lista de sitios oficiales -->
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus libero sequi delectus ipsum neque eius ducimus iste praesentium, consectetur quisquam. Modi esse qui eligendi. Quae eveniet totam vel rerum sed, tenetur accusamus vitae, harum, exercitationem inventore quo
-                        explicabo commodi esse minus hic facilis consequuntur possimus ipsum. Recusandae, officiis hic, excepturi est sed culpa dolor dicta ducimus exercitationem fugiat, aperiam repudiandae sit vel vero autem quo eius adipisci rem fuga perferendis ea voluptate explicabo quisquam?
-                        Culpa aliquam voluptatum quisquam laudantium doloremque assumenda libero saepe harum exercitationem facilis, repudiandae maxime tenetur beatae accusantium eligendi praesentium temporibus soluta similique. Eveniet officia asperiores consequatur.</p>
+                    <p>GRAN PREMIO DE MONACO:El gran premio de monaco 2022 llamo la atencion de todos los fans fue una espetacular carrera de estrategia entre Red Bull y Ferrari 
+                        en 2022 el campeonato se esta disputando entre Ferrari y Red Bull tras la caida de Mercedes al no elaborar el mejor nuevo carro para el 2022.Tras la fantastica carrera
+                        de monaco a estado saliendo mucho un nombre el nombre del ganador de la carrera CHECO PEREZ el cual se pone en disputa el campeonato de pilotos del 2022 contra su compañero de equipo Max Versstapen y el rival de ferrari Charles leclerc  .</p>
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
+                        <img src="assets/images/monaco.webp" alt="ilustracion  artículo" height="600px" width="auto">
                         <figcaption>Texto de descripción de mi ilustración.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
