--- a/tema1.html
+++ b/tema1.html
@@ -172,7 +172,7 @@
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="assets/images/monaco.webp" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                        <figcaption>Gran premio de Monaco</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -197,9 +197,9 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Descripción del ícono" height="35px" width="auto"> Video de Youtube</h2>
+                        <h2> <img src="assets/images/f1.png" alt="Descripción del ícono" height="35px" width="auto"> Video de Youtube del resumen del gran premio de monaco </h2>
                         <!-- Fecha en la que se escribió el artículo -->
-                        <h4>dd/mes/aa</h4>
+                        <h4>5/6/22</h4>
                     </hgroup>
                 </header>
                 <!-- inicia contenido del artículo -->
@@ -207,18 +207,23 @@
 
                     <!-- inicia video  -->
                     <figure>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/R9WF8ZtMbrA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <figcaption>¡No lo hagan!</figcaption>
+                        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=sp_ntF4GmSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <figcaption>¡La increible victoria de checo perez en monaco!</figcaption>
                     </figure>
                     <!-- termina Video-->
 
                     <!-- inician párrafos adicionales -->
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis vitae odio, impedit laboriosam doloremque, perspiciatis id illo tenetur sequi aspernatur corrupti aperiam. Eius, nesciunt asperiores mollitia libero molestiae assumenda voluptas quae consequatur. Dolorem
-                        numquam non, expedita molestias deleniti unde voluptatibus suscipit, optio at amet autem inventore necessitatibus. Minus deserunt aliquam pariatur voluptatum vitae, delectus accusamus distinctio, nostrum consequuntur aperiam sequi? Minus alias impedit quasi dolor animi
-                        ratione quas accusamus facilis libero ex quisquam, dolores sit quaerat ut enim, velit rem laudantium minima. Harum ex totam et tempora officia quas veniam dolore consequatur error? Nisi adipisci ullam fuga sequi libero nobis?</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem cupiditate in est sed cum. Quis quibusdam porro tenetur similique dicta quod, reiciendis voluptatibus iure libero voluptate laborum ipsa praesentium nulla! Vel quos accusamus pariatur, nulla,
-                        perspiciatis nisi vitae fuga numquam dolores harum voluptate. Minus culpa ipsa obcaecati numquam architecto aperiam cumque atque, eaque, perspiciatis nesciunt reiciendis voluptate beatae magnam accusamus vitae officia. Quo, tempora ea modi incidunt dicta nulla unde soluta
-                        vero ab voluptates aut aliquid optio quod impedit deleniti delectus praesentium quis repellendus possimus. Minima asperiores molestias incidunt cum inventore magni, consequatur natus? Nihil odio quod recusandae quas?</p>
+                    <p>En el canal de youtube oficial de la f1 cada carrera que se corre suben un resumen de los mejores momentos de cada Premio
+                        Ademas de encontar los mejores momentos puedes ver entrevistas exclusivas o videos informativos sobre la introduccion de nuevosusarios y fans de la f1
+                        antes de cada carrera mustran en vivo el recorido de los pilotos por el circuito,tambien muestran si no tienes f1 tv te muiestran los mejores onboard de cada 
+                        carrera
+                    </p>
+                    <p>En este caso la gran carrera de Monaco muestran la increible carrera de estrategia y emocionante entre Red Bull y Ferrari los momentos mas emocionntes del mismo
+                        uno de las acciones mas sorprendetes el masivo choque de mick shumacher sobre las barreras del trasado de montecarlo que causo una badera roja en el gran premio 
+                        se sabe que monaco es una pista de no tantos rebases pero sobre situaciones de lluvia píerre gasly fue uno de los unicops pilotos sobre lapista que mostraron soprendentes adelantamientos en una pista muy dificil 
+                        y por supuesto la increible vistoria de checo y su celebracion con todo su equipo, y el momento sentimentalde checo tras escuchar elhimno nacional de mexico en circuito con mas prestigio y el mas dificil del 
+                        calendario 
+                    </p>
                     <!-- Terminan párrafos adicionales -->
                 </div>
                 <!-- Termina contenido del artículo -->
@@ -242,19 +247,17 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo con ícono -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Descripción del ícono" height="35px" width="auto"> Investigación</h2>
+                        <h2> <img src="assets/images/f1.png" alt="Descripción del ícono" height="35px" width="auto"> Hamilton VS Max  2021</h2>
                         <!-- Fecha en la que se escribió el artículo -->
-                        <h4>dd/mes/aa</h4>
+                        <h4>9/6/22</h4>
                     </hgroup>
                 </header>
                 <!-- inicia contenido del artículo -->
                 <div>
 
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid exercitationem odio in. Corporis sed optio fugiat odit, culpa impedit dicta ea tempora, consectetur quidem quasi omnis voluptatum sint magni molestiae praesentium veniam, quo earum inventore quam.
-                        <strong>Cupiditate, odio! Sequi nostrum quia totam doloremque odio dolores</strong>, <q>illum iste mollitia quo est earum eius et ea id fugit repellendus laborum quod tempore dolorum?</q> <cite>--Dolores doloremque</cite> consectetur sapiente placeat nulla unde voluptate
-                        praesentium temporibus,
-                        debitis dolorum, distinctio
-                        ipsam vitae repudiandae consequatur illum minima? Labore eos libero nobis rerum qui ipsum est pariatur saepe voluptatum quia, sapiente, modi velit, ad et quaerat non? Rem.</p>
+                    <p>2021-La gran rivalidad entre el 7 veces campeon del mundo Lewis Hamilton vs el joven Max Versstapen fue todo un espetaculo durante toda la tempoprada 2021 tras el deomino de mercedes en los ultimos 6 años Red Bull venia mas fuerte para cambiar eso Es muy conociada la relacion entre Mercedes y Red Bull por competir entre ellos por ver quien es el mejor 
+                        <strong>Red Bull tenia un carro competitivo para pelear lado a lado contra mercedes solo habria que ejecutarlo</strong>, <q>Max y su nuevo compañero de equipo Checo perez iban a por los mercedes </q> <cite>-¿Lo lograron?-</cite> <q>Los red bull consiguieron derrotar a los campeones del mundo Mercedes</q>
+                       .</p>
                     <p>Dignissimos accusantium asperiores expedita velit, provident a nisi veritatis consectetur, dolorum neque eveniet dolorem iusto repellendus vero necessitatibus dolore modi quibusdam, officia illo? Inventore pariatur eligendi vero, libero saepe, iste commodi atque facilis
                         ducimus voluptatem alias impedit mollitia aut iure voluptatibus delectus consequatur. <strong>Aliquam nulla maxime ipsum temporibus sed? Dicta eligendi nihil nisi repudiandae magnam ad, quisquam voluptatum repellendus beatae pariatur? Amet nemo placeat consequatur numquam
                             suscipit minus sed.</strong> Consequatur eveniet nostrum corporis ad numquam odio et eos nam omnis dignissimos? Nostrum, illo! Recusandae maxime est, ab quos error quibusdam tempore soluta quisquam, beatae cupiditate, odio officiis nihil obcaecati ipsa?</p>
@@ -271,7 +274,7 @@
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion 1º artículo" height="600px" width="auto">
+                        <img src="assets/images/max campeon.jfif" alt="ilustracion 1º artículo" height="600px" width="auto">
                         <figcaption>Texto de descripción de mi ilustración.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
