--- a/tema2.html
+++ b/tema2.html
@@ -82,7 +82,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Ranking de ejemplo</h2>
+                        <h2> <img src="assets/images/futbol-americano.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Ranking de ejemplo</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>dd/mes/aa</h4>
                     </hgroup>
@@ -109,8 +109,8 @@
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                        <img src="assets/images/messi.jfif" alt="ilustracion  artículo" height="600px" width="auto">
+                        <figcaption>Messi el mejor jugador del MUNDO?</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -135,7 +135,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Sitios oficiales ejemplo</h2>
+                        <h2> <img src="assets/images/futbol-americano.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Sitios oficiales ejemplo</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>dd/mes/aa</h4>
                     </hgroup>
@@ -157,8 +157,8 @@
                         Culpa aliquam voluptatum quisquam laudantium doloremque assumenda libero saepe harum exercitationem facilis, repudiandae maxime tenetur beatae accusantium eligendi praesentium temporibus soluta similique. Eveniet officia asperiores consequatur.</p>
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
-                        <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                        <img src="assets/images/qatar 2022.jfif" alt="ilustracion  artículo" height="600px" width="auto">
+                        <figcaption>Mundial 2022 que se espera y informacion .</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
                 </div>
@@ -183,7 +183,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Descripción del ícono" height="35px" width="auto"> Video de Youtube</h2>
+                        <h2> <img src="assets/images/futbol-americano.png" alt="Descripción del ícono" height="35px" width="auto"> Video de Youtube</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>dd/mes/aa</h4>
                     </hgroup>
@@ -228,7 +228,7 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo con ícono -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Descripción del ícono" height="35px" width="auto"> Investigación</h2>
+                        <h2> <img src="assets/images/futbol-americano.png" alt="Descripción del ícono" height="35px" width="auto"> Investigación</h2>
                         <!-- Fecha en la que se escribió el artículo -->
                         <h4>dd/mes/aa</h4>
                     </hgroup>
@@ -257,7 +257,7 @@
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
-                        <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion 1º artículo" height="600px" width="auto">
+                        <img src="assets/images/campo.jpg" alt="ilustracion 1º artículo" height="600px" width="auto">
                         <figcaption>Texto de descripción de mi ilustración.</figcaption>
                     </figure>
                     <!-- termina ilustración del artículo -->
